--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="mathCalculator.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
     <meta charset="utf-8" />
     <script src="mathCalculator.js"></script>
